# cyclonedds-release

./: 0001-Add-IDL-compiler-dependencies.patch  0001-Don-t-build-IDLC.patch  0002-Actually-DO-build-the-IDLC.patch  README.md  debian.store  package.xml  patches.conf  releaser_history.json  tracks.yaml
debian/: changelog  control  control.em  gbp.conf  rules  rules.em
