<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>cyclonedds</name>
  <version>0.1.0</version>
  <description>Performant and robust open-source DDS implementation.</description>
  <maintainer email="scott@openrobotics.org">Scott K Logan</maintainer>
  <license>EPL-2.0</license>

  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>java</buildtool_depend>
  <buildtool_depend>maven</buildtool_depend>

  <buildtool_export_depend>java</buildtool_export_depend>

  <build_depend>libcunit-dev</build_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
